Fix #356 Table header alignment

--- a/src/scss/components/_table.scss
+++ b/src/scss/components/_table.scss
@@ -36,10 +36,6 @@
                     margin-left: 0.5rem;
                     margin-right: 0;
                     font-size: 1rem;
-                    opacity: 0;
-                    &.is-visible {
-                        opacity: 1;
-                    }
                 }
                 &.is-numeric {
                     flex-direction: row-reverse;
